# dsp-tool-box

./: CMakeLists.txt  README.md
include/ha/dsp_tool_box/core/: types.h
include/ha/dsp_tool_box/filtering/: one_pole.h
include/ha/dsp_tool_box/modulation/: adsr_envelope.h  modulation_phase.h  modulation_phase.inl.h
source/filtering/: one_pole.cpp
source/modulation/: adsr_envelope.cpp  modulation_phase.cpp
test/: adsr_envelope_test.cpp  modulation_test.cpp  one_pole_test.cpp
